# g2t

./: CMakeLists.txt  creator.cpp  creator.h  g2t.cpp  g2t.h  plasma-applet-g2t.desktop  reminder.cpp  reminder.h
